--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -7,7 +7,7 @@
     #menuButton {
         display: none;
     }
-    
+
     #menuNavigation {
         margin-top: 0;
         padding: 0;
@@ -22,21 +22,28 @@
     #menuNavigation ul li {
         padding: 0;
     }
-    
+
     #menuNavigation ul li a {
         padding: 1rem;
     }
 
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .templeGallery {
+        width: 100%;
         display: grid;
-        padding: 0 2rem;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
         gap: 2rem;
     }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1000px) {
     .templeGallery {
+        width: 80%;
         grid-template-columns: repeat(3, 1fr);
     }
 }
