--- a/project/styles/contact.css
+++ b/project/styles/contact.css
@@ -1,5 +1,5 @@
 .hero-banner {
-    background: linear-gradient(135deg, var(--secondary-color), var(--accent-color));
+    background: linear-gradient(135deg, var(--tertiary-color), var(--accent-color));
     background-size: 200% 200%;
 }
 
@@ -31,7 +31,7 @@ form fieldset {
 
 form legend {
     font-family: var(--primary-font);
-    font-size: 1.7rem;
+    font-size: 2rem;
     font-weight: bold;
     color: var(--text-color-dark);
     margin-bottom: 1rem;
@@ -41,7 +41,7 @@ form label {
     display: block;
     text-align: left;
     margin-left: 0.5rem;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: bold;
     color: var(--primary-color);
 }
