--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -20,6 +20,7 @@
     from {
         opacity: 0;
     }
+
     to {
         opacity: 1;
     }
@@ -29,18 +30,23 @@
     0% {
         transform: scale(1.1) translate(0, 0);
     }
+
     20% {
         transform: scale(1.1) translate(-2px, -2px);
     }
+
     40% {
         transform: scale(1.1) translate(2px, 2px);
     }
+
     60% {
         transform: scale(1.1) translate(-1px, 1px);
     }
+
     80% {
         transform: scale(1.1) translate(1px, -1px);
     }
+
     100% {
         transform: scale(1.1) translate(0, 0);
     }
@@ -50,9 +56,11 @@
     0% {
         transform: scale(1);
     }
+
     50% {
         transform: scale(1.1);
     }
+
     100% {
         transform: scale(1);
     }
@@ -62,6 +70,7 @@
     0% {
         background-position: 0% 50%;
     }
+
     100% {
         background-position: 100% 50%;
     }
@@ -175,7 +184,6 @@ header {
 }
 
 .nav-item a.active {
-    /* color: var(--accent-color); */
     font-weight: bold;
     position: relative;
 }
@@ -284,7 +292,7 @@ footer {
     padding: 0;
 }
 
-.footer-nav-item a {    
+.footer-nav-item a {
     font-family: var(--primary-font);
     color: var(--text-color-light);
     text-decoration: none;
@@ -360,7 +368,8 @@ form label {
     font-weight: bold;
 }
 
-form input, form textarea {
+form input,
+form textarea {
     width: 100%;
     padding: 0.5rem;
     margin-bottom: 1rem;
@@ -471,4 +480,58 @@ form button:hover {
 
 .card {
     position: relative;
+}
+
+@media (max-width: 768px) {
+
+    header {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .header-logo {
+        margin-bottom: 1rem;
+    }
+
+    .nav-list {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    main {
+        padding: 1rem;
+    }
+
+    .cta-button {
+        font-size: 1.2rem;
+        padding: 0.6rem 1rem;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    .gallery-grid {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;
+        margin: 2rem 0px;
+    }
+
+    @media (max-width: 480px) {
+        
+
+        .hero-description {
+            font-size: 1rem;
+        }
+
+        .cta-button {
+            font-size: 1rem;
+            padding: 0.5rem 0.8rem;
+        }
+
+        .nav-list {
+            gap: 0.5rem;
+        }
+    }
 }
