--- a/project/styles/games-gallery.css
+++ b/project/styles/games-gallery.css
@@ -24,6 +24,7 @@
     justify-items: center;
     margin: 0 auto;
     width: 100%;
+    min-height: 500px;
 }
 
 .card {
@@ -108,7 +109,7 @@
 
 @media (max-width: 768px) {
     .section-game-gallery {
-        padding: 2rem 1rem;
+        padding: 2rem 0rem;
     }
 
     .section-title {
@@ -116,7 +117,7 @@
     }
 
     .gallery-grid {
-        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
 
     .card {
@@ -132,6 +133,7 @@
     }
 
     .card-game {
+        height: 100%;
         flex-direction: column;
         align-items: center;
         text-align: center;
@@ -148,6 +150,15 @@
     
     .card-game .card-details-container {
         grid-template-columns: 1fr;
+        gap: 0px;
+        margin-bottom: 1rem;
+    }
+    
+    .card-details {
+        gap: 0.5rem;
+        display: flex;
+        padding: 0px;
+        text-align: left;
     }
     
     .card-game .card-image {
@@ -157,6 +168,10 @@
 
 @media (max-width: 480px) {
     .card-game .card-title {
-        font-size: 1.6rem;
+        font-size: 1.2rem;
+    }
+
+    .card-game .card-image {
+        height: 150px;
     }
 }
